Fix full container overflow

--- a/resources/css/legacy.css
+++ b/resources/css/legacy.css
@@ -27,6 +27,7 @@
   flex-grow: 1;
   background: var(--box-bg-color);
   background: linear-gradient(180deg, var(--box-bg-color) 0%, var(--bg-color) 100%);
+  overflow: auto; /* 1 */
 }
 
 /*
